# MetodosII

./: CMakeLists.txt  README.md  blur.cpp
autovalores/: MN_autovalores.cpp  MN_autovalores.hpp  Makefile  a.out  jacobi.py  main.cpp  qr.py  teste
edo/: libpvi  main.cpp  pvi.cpp
filtros/: CMakeCache.txt  contorno.cpp
integral/: Makefile  integral.cpp  integral.h  main.cpp  teste
pvc/: Makefile  main.cpp  pvc.cpp  pvc.hpp  teste
pvi/: a.out  main.cpp  pvi.cpp  pvi.hpp  teste.out
